# rg-cli

./: Cargo.toml  DAY1.md  FINAL.md  PERF.md  README.md  SUMMARY.md
src/: main.rs
src/cli/: mod.rs
src/error/: mod.rs
src/highlight/: mod.rs
src/search/: mod.rs
src/stats/: mod.rs
src/traversal/: mod.rs
