[package]
name = "rg-cli"
version = "0.1.0"
edition = "2021"
description = "A fast, cross-platform file search tool similar to ripgrep"
license = "MIT"
repository = "https://github.com/Kakaluote000/rg-cli"
keywords = ["cli", "search", "grep", "ripgrep"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
regex = "1"
rayon = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
